# prisma-client-rust

./: Cargo.toml
crates/lib/src/: client.rs
src/: client.rs
