[workspace]
members = [
  "examples/*",
  "examples/tauri/src-tauri",
  "integration-tests",
  "tests/*/*",
  "crates/*",
  "crates/sdk/example/*",
  "prisma-cli",
]
exclude = ["examples/tauri"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

diagnostics = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
dmmf = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
psl = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
schema-core = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }
user-facing-errors = { git = "https://github.com/Brendonovich/prisma-engines", rev = "671a0bb424a6481df5b7c8bd85734c859d290722" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.6.0"

tauri-specta = { version = "2.0.0-rc.9" }

# This is a deprecated feature so we don't really care about the verison
rspc = "*"

# We don't lock version cause PCR only depends on `derive(Type)` so it should be fine.
specta = "^2.0.0-rc"
